# bridge

./: .env.example  .gitignore  .replit  main.py  pyproject.toml  replit.md  requirements.txt  setup_template.py  test_both_orders.py  test_full_gateway.py  test_gateway.py  test_real_mt5.py
attached_assets/: Pasted-You-are-a-senior-backend-trading-infrastructure-enginee_1769427393962.txt
docs/: AI_INTEGRATION_PROMPT.txt  AI_PROMPT.md  API_REFERENCE.md  DEPLOYMENT.md  INTEGRATION_GUIDE.md  RENDER_APP_PROMPT.md
scripts/: install_service.py  setup_vps.py
src/: autotrading.py  config.py  instance_manager.py  models.py  mt5_bridge.py  mt5_bridge_windows.py  mt5_connector.py  mt5_worker.py  popup_killer.py  queue_manager.py  security.py  terminal_manager.py  trading_engine.py  user_logger.py
src/routes/: account.py  gateway.py  health.py  market.py  trade.py  websocket.py
static/: admin.html
